# FiL

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  fil-recipee.nix  flake.nix  sonar-project.properties  vcpkg.json
.github/workflows/: ci-linux.yml
.nix/: default.nix  fil.nix  shell.nix
cmake/: filConfig.cmake.in
doc/: algorithm_datastructures.md  cli.md  copa.md  database_kv.md  descpa.md  file_reader.md  fsm.md  meta.md  p2p.md  soa.md
include/cli/: command_line_interface.hh
include/fil/algorithm/: container.hh  contains.hh  string.hh  suitable.hh
include/fil/cli/: command_line_interface.hh
include/fil/copa/: CMakeLists.txt  ast.hh  buffer_reader.hh  copa.hh  debug.hh  debug_details.hh  error.hh  matcher.hh  member.hh  print_error.hh  production.hh  rule.hh  sink.hh  visit.hh  wrapper_utils.hh
include/fil/datastructure/: boundary_map.hh  fixed_circular_buffer.hh  rng.hh  soa.hh  soa_vector.hh
include/fil/descpa/: CMakeLists.txt  ast.hh  descpa.hh  member.hh  sink.hh
include/fil/exception/: exception.hh
include/fil/file/: file_reader.hh  read_file.hh  temporary.hh
include/fil/fsm/: state_machine.hh
include/fil/kademlia/: node.hh
include/fil/kv_db/: key_value_db.hh  kv_rocksdb.hh
include/fil/meta/: buffer_reader.hh  extract_member_type.hh  reader.hh  shallow_copy.hh  static_string.hh  tuple.hh  type_traits.hpp  typename.hh  visit_utils.hh
include/fil/p2p/: kademlia_node.hh
include/fil/type_traits/: extract_member_type.hh  type_traits.hpp
internal/p2p/: CMakeLists.txt  kademlia_node.cpp
internal/src/kv_db/: CMakeLists.txt  kv_rocksdb.cpp
misc/cmake/utility/: BuiltFromSource.cmake
misc/pkgconfig/: fil.pc
test/: CMakeLists.txt  cli_testcase.cpp  state_machine_testcase.cpp
tests/: CMakeLists.txt  algorithm_testcase.cpp  boundary_map_testcase.cpp  cli_testcase.cpp  copa_calculator_testcase.cpp  copa_debugging_testcase.cpp  copa_h_testcase.cpp  copa_language_testcase.cpp  copa_standalone_testcase.cpp  copa_testcase.cpp  descpa_testcase.cpp  file_reader_testcase.cpp  fsm_testcase.cpp  kv_db_rocksdb_testcase.cpp  main.cpp  reader_testcase.cpp  rng_testcase.cpp  soa.cpp  soa_testcase.cpp  soa_vector.cpp
